Removed 'white space only text'. Fixed layout issue on iOS. Cleaned up CSS. Added individual links to repositories.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-html, body {
+* {
     margin: 0;
     padding: 0;
+}
+html, body {
     font-family: "Open Sans";
     height: 100%;
 }
 
 #header {
-    margin: 0;
-    padding: 0;
     width: 100%;
     background-color: #0099ff;
     color: white;
@@ -35,20 +35,18 @@ html, body {
 
 #content #website {
     margin-top: 3em;
-    padding: 1em 1em 1em 0;
+    padding: 1em 0.5em 1em 0;
     display: inline-block;
     border-right: solid 2px #0099ff;
 }
 
 #content #software {
     margin-top: 3em;
-    padding: 1em 0 1em 1em;
-    margin-top: 2em;
+    padding: 1em 0;
     display: inline-block;
 }
 
 #content a.tile {
-    margin: auto;
     background-color: #cccccc;
     border: 3px outset #444444;
     padding: 2em 1em;
@@ -56,6 +54,11 @@ html, body {
     color: #000;
     font-style: italic;
     border-radius: 0.5em;
+    display: inline-block;
+    margin-left: 0.5em;
+}
+
+#block {
     display: inline-block;
 }
 
@@ -81,7 +84,6 @@ html, body {
 
 #footer p {
     padding: 1em 0 1em 1em;
-    margin: 0;
 }
 
 #footer #copyright {
